# maccoys

./: .dockerignore  .gitignore  Cargo.toml  Makefile  Procfile  README.md  Readme.md  config.toml  docker-compose.yaml  environment.yaml  maccoys.nf  nextflow.config  pyproject.toml
ansible/: conda.environment.yml  foo.yml  hosts.template.yml  main.yml
ansible/common/files/: daemon.json  p10kzsh-basic  zshrc-basic
ansible/common/tasks/: main.yml
ansible/maccoys-entrypoint/defaults/: main.yml
ansible/maccoys-entrypoint/handlers/: main.yml
ansible/maccoys-entrypoint/tasks/: main.yml
ansible/maccoys-entrypoint/tests/: test.yml
ansible/maccoys-entrypoint/vars/: main.yml
ansible/maccoys-error/defaults/: main.yml
ansible/maccoys-error/handlers/: main.yml
ansible/maccoys-error/tasks/: main.yml
ansible/maccoys-error/tests/: test.yml
ansible/maccoys-error/vars/: main.yml
ansible/maccoys-http-queue-server/defaults/: main.yml
ansible/maccoys-http-queue-server/handlers/: main.yml
ansible/maccoys-http-queue-server/tasks/: main.yml
ansible/maccoys-http-queue-server/tests/: test.yml
ansible/maccoys-http-queue-server/vars/: main.yml
ansible/maccoys-identification/defaults/: main.yml
ansible/maccoys-identification/handlers/: main.yml
ansible/maccoys-identification/tasks/: main.yml
ansible/maccoys-identification/tests/: test.yml
ansible/maccoys-identification/vars/: main.yml
ansible/maccoys-indexing/defaults/: main.yml
ansible/maccoys-indexing/handlers/: main.yml
ansible/maccoys-indexing/tasks/: main.yml
ansible/maccoys-indexing/tests/: test.yml
ansible/maccoys-indexing/vars/: main.yml
ansible/maccoys-publishing/defaults/: main.yml
ansible/maccoys-publishing/handlers/: main.yml
ansible/maccoys-publishing/tasks/: main.yml
ansible/maccoys-publishing/tests/: test.yml
ansible/maccoys-publishing/vars/: main.yml
ansible/maccoys-scoring/defaults/: main.yml
ansible/maccoys-scoring/handlers/: main.yml
ansible/maccoys-scoring/tasks/: main.yml
ansible/maccoys-scoring/tests/: test.yml
ansible/maccoys-scoring/vars/: main.yml
ansible/maccoys-search-space-generation/defaults/: main.yml
ansible/maccoys-search-space-generation/handlers/: main.yml
ansible/maccoys-search-space-generation/tasks/: main.yml
ansible/maccoys-search-space-generation/tests/: test.yml
ansible/maccoys-search-space-generation/vars/: main.yml
ansible/maccoys/defaults/: main.yml
ansible/maccoys/files/: maccoys.toml
ansible/maccoys/handlers/: main.yml
ansible/maccoys/tasks/: main.yml
ansible/maccoys/tests/: test.yml
ansible/maccoys/vars/: main.yml
ansible/monitored/defaults/: main.yml
ansible/monitored/handlers/: main.yml
ansible/monitored/tasks/: main.yml
ansible/monitored/tests/: test.yml
ansible/monitored/vars/: main.yml
ansible/monitoring/tasks/: add_host_group_to_prometheus.yml  main.yml
ansible/monitoring/vars/: main.yml
ansible/storage/defaults/: main.yml
ansible/storage/handlers/: main.yml
ansible/storage/tasks/: main.yml
ansible/storage/tests/: test.yml
ansible/storage/vars/: main.yml
docker/: Dockerfile
docker/comet/: Dockerfile  entrypoint.sh
docker/maccoys/: Dockerfile
docker/maccoys_py/: Dockerfile
gui/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  webpack.config.js
gui/assets_raw/: index.js
gui/assets_raw/sass/: index.sass
gui/src/: app.rs  main.rs  routes.rs
gui/src/pages/: mod.rs  not_found.rs  start.rs
maccoys/: Cargo.toml
maccoys/src/: bin.rs  constants.rs  functions.rs  lib.rs  pipeline.rs
maccoys/src/database/: mod.rs
maccoys/src/errors/: mod.rs
maccoys/src/errors/axum/: mod.rs
maccoys/src/io/: mod.rs
maccoys/src/io/axum/: multipart.rs
maccoys/src/io/comet/: configuration.rs  peptide_spectrum_match_tsv.rs
maccoys/src/pipeline/: configuration.rs  convert.rs  mod.rs  pipeline.rs  search_manifest.rs  storage.rs
maccoys/src/search_space/: decoy_cache.rs  mod.rs  search_space_generator.rs
py_src/: pyproject.toml
py_src/maccoys/: __main__.py  goodness_of_fit.py  local_outlier_probability_wrapper.py  scoring.py
py_src/maccoys_scoring/: __main__.py  annotate.py  goodness_of_fit.py  scoring.py  search_engine_type.py
py_src/maccoys_scoring/io/: comet_tsv.py
src/: bin.rs  constants.rs  functions.rs  goodness_of_fit_record.rs  lib.rs  peptide_spectrum_match.rs  precursor.rs
src/database/: database_build.rs
src/errors/axum/: web_error.rs
src/io/: mod.rs
src/io/axum/: mod.rs  multipart.rs
src/io/comet/: configuration.rs  mod.rs  peptide_spectrum_match_tsv.rs
src/io/mzml/: error.rs  index.rs  indexed_extractor.rs  indexer.rs  mod.rs
src/pipeline/: configuration.rs  convert.rs  local_pipeline.rs  mod.rs  pipeline.rs  queue.rs  queue_server.rs  remote_pipeline.rs  remote_pipeline_web_api.rs  search_manifest.rs  storage.rs  utils.rs
src/pipeline/errors/: http_queue_server_error.rs  identification_error.rs  indexing_error.rs  message_error.rs  mod.rs  pipeline_error.rs  publication_error.rs  queue_error.rs  scoring_error.rs  search_space_generation_error.rs  storage_error.rs
src/pipeline/messages/: compressed_binary_message.rs  error_message.rs  identification_message.rs  indexing_message.rs  is_message.rs  mod.rs  publication_message.rs  scoring_message.rs  search_space_generation_message.rs
src/pipeline/tasks/: cleanup_task.rs  error_task.rs  identification_task.rs  indexing_task.rs  mod.rs  preparation_task.rs  publication_task.rs  scoring_task.rs  search_space_generation_task.rs  task.rs
src/search_space/: decoy_cache.rs  decoy_generator.rs  decoy_part.rs  macpepdb_client.rs  mod.rs  search_space_generator.rs  target_lookup.rs
src/ui/: local_search_monitor.rs  mod.rs
src/utils/: mod.rs  serde.rs
src/web/: decoy_controller.rs  mod.rs  server.rs  web_error.rs
src/web/decoy_api/: decoy_controller.rs  mod.rs  server.rs
src/web/results_api/: mod.rs  results_controller.rs  server.rs
test_files/: controllerType_0_controllerNumber_1_scan_10002.tsv  expected.comet.params  maccoys.http-queue.toml
(+7 files in other folders)
