[package]
name = "maccoys"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"] 
edition = "2021"
description = "Mass spectrometry search engine using MaCPepDB as search space."
repository = "https://github.com/medbioinf/maccoys"
homepage = "https://github.com/medbioinf/maccoys"
documentation = "https://github.com/medbioinf/maccoys"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maccoys"
path = "src/lib.rs"

[[bin]]
name = "maccoys"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
macpepdb = { path = "../macpepdb-rs" }
reqwest = "0.11.22"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
tracing = "0.1.39"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
