[package]
name = "maccoys"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"]
edition = "2021"
description = "Mass spectrometry search engine using MaCPepDB as search space."
repository = "https://github.com/medbioinf/maccoys"
homepage = "https://github.com/medbioinf/maccoys"
documentation = "https://github.com/medbioinf/maccoys"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maccoys"
path = "src/lib.rs"

[[bin]]
name = "maccoys"
path = "src/bin.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-stream = "0.3.5"
axum = { version = "0.7.4", features = ["multipart"] }
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
deadqueue = { version = "0.2.4", features = ["limited"] }
dihardts_omicstools = "~3.1.0"
fallible-iterator = "0.3.0"
fancy-regex = "0.11.0"
futures = "0.3.28"
glob = "0.3.1"
indicatif = "0.17.7"
lazy_static = "1.4.0"
local-outlier-probabilities = "1.0.1"
lzma-rs = "0.3.0"
macpepdb = { git = "https://github.com/medbioinf/macpepdb.git", rev = "b42e6424f342384bdb1e2e12fdf4815c7badfce0" }
maccoys-exchange-entities = { path = "../maccoys-web-entities" }
# maccoys-exchange-entities = { git = "https://github.com/medbioinf/maccoys-exchange-entities", branch = "main" }
paste = "1.0.15"
polars = { version = "0.46.0", features = [
    "abs",
    "csv",
    "cum_agg",
    "json",
    "lazy",
    "ndarray",
    "strings",
    "serde",
] }
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
rand = "0.8.5"
reqwest = { version = "0.12.8", features = [
    "blocking",
    "json",
    "stream",
    "multipart",
] }
rustis = { version = "0.13.3", features = ["tokio-runtime"] }
scylla = "0.8.1"
serde = "1.0.189"
serde_json = "1.0.107"
signal-hook = "0.3.17"
tokio = "1.33.0"
tokio-util = "0.7.11"
toml = "0.8.14"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.39"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.3"
uuid = "1.9.0"
http = "1.1.0"
tracing-loki = "0.2.6"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", features = [
    "http-listener",
] }
thiserror = "2.0.12"
gethostname = "1.0.2"
murmur3 = "0.5.2"
mini-moka = "0.10.3"

[dev-dependencies]
serial_test = "3.2.0"
