[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["py_src"]

[project]
name = "maccoys_scoring"
version = "0.0.1"
requires-python = ">=3.11"


dependencies = [
    "numpy ~= 1.26",
    "pandas ~= 2.1",
    "scipy  ~= 1.11",
    "requests ~= 2.31.0"
]


[project.optional-dependencies]
dev = [
    "pandas-stubs",
    "pylint"
]
