[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["py_src"]

[project]
name = "maccoys"
version = "0.0.1"
requires-python = ">=3.11"


dependencies = [
    "numpy ~= 1.26",
    "pandas ~= 2.1",
    "scipy  ~= 1.11",
    "statsmodels ~= 0.13",
    "PyNomaly ~= 0.3.4",
]


[project.optional-dependencies]
dev = [
    "pandas-stubs",
    "ruff",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["E501"]
