[package]
name = "maccoys-gui"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
manganis = "0.2.2"
dioxus-free-icons = { version = "0.8.3", features = ["font-awesome-brands", "font-awesome-regular", "font-awesome-solid"] }
