[package]
name = "maccoys"
version = "0.1.0"
authors = ["Dirk Winkelhardt <dirk.winkelhardt@rub.de>"] 
edition = "2021"
description = "Mass spectrometry search engine using MaCPepDB as search space."
repository = "https://github.com/medbioinf/maccoys"
homepage = "https://github.com/medbioinf/maccoys"
documentation = "https://github.com/medbioinf/maccoys"
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maccoys"
path = "src/lib.rs"

[[bin]]
name = "maccoys"
path = "src/bin.rs"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-stream = "0.3.5"
axum = "0.7.4"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
deadqueue = { version = "0.2.4", features = ["limited"] }
dihardts_omicstools = "2.0.3"
fallible-iterator = "0.3.0"
fancy-regex = "0.11.0"
futures = "0.3.28"
glob = "0.3.1"
indicatif = "0.17.7"
lazy_static = "1.4.0"
# macpepdb = { path = "../../macpepdb" }
macpepdb = { git = "https://github.com/medbioinf/macpepdb.git", rev = "fcf52f9009fbf049258428e9aad058b3985b6221" }
paste = "1.0.15"
polars = { version = "0.35.4", features = ["csv", "cum_agg", "lazy", "strings"] }
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
rustis = { version = "0.13.3", features = ["tokio-runtime"] }
scylla = "0.8.1"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
toml = "0.8.14"
tracing = "0.1.39"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.5"
tracing-subscriber = "0.3.17"
uuid = "1.9.0"
