[tool.poetry]
name = "py-src"
version = "0.1.0"
description = ""
authors = ["kulgg <75735874+kulgg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
numpy = "^1.26.1"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
